<resources>
    <string name="app_name">Homework-3</string>
    <string name="Austria">Австрия</string>
    <string name="Poland">Польша</string>
    <string name="Italy">Италия</string>
    <string name="Columbia">Колумбия</string>
    <string name="Madagascar">Мадагаскар</string>
    <string name="Thailand">Таиланд</string>
    <string name="Denmark">Дания</string>
    <string name="Switzerland">Швейцария</string>
    <string name="main_name">Задание №1. Флаги</string>
    <string name="to_second_activity">К заданию №2</string>
    <string name="second_name">Задание №2. Загрузка картинки</string>
    <string name="to_main_activity">К заданию №1</string>
    <string name="text_view_hint">Введите ссылку здесь</string>
    <string name="enter_link">Введите ссылку на картинку и нажмите кливишу Search/Enter. Ниже приведен пример:</string>
    <string name="website">http://picsum.photos/images</string>
    <string name="example">https://i.picsum.photos/id/13/2500/1667.jpg?hmac=SoX9UoHhN8HyklRA4A3vcCWJMVtiBXUg0W4ljWTor7s</string>
    <string name="example2">https://i.picsum.photos/id/28/4928/3264.jpg?hmac=GnYF-RnBUg44PFfU5pcw_Qs0ReOyStdnZ8MtQWJqTfA</string>
    <string name="downloading">Загрузить</string>
    <string name="toast_message_1">Вы можете ввести другую ссылку на картинку</string>
    <string name="toast_message_2">Ошибка при загрузке картинки. Введите ссылку правильно</string>
    <string name="to_third_activity">К заданию №3</string>
    <string name="third_name">Задание №3. AsyncTask</string>
</resources>